--- a/android/KMAPro/build.gradle
+++ b/android/KMAPro/build.gradle
@@ -4,14 +4,17 @@ buildscript {
         google()
         jcenter()
         maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
+        maven {
             url 'https://maven.fabric.io/public'
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.github.triplet.gradle:play-publisher:1.2.0'
-        classpath 'com.google.gms:google-services:3.1.2'
-        classpath 'io.fabric.tools:gradle:1.25.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.github.triplet.gradle:play-publisher:2.1.0-SNAPSHOT'
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.25.4'
     }
 }
 
