--- a/android/KMEA/build.gradle
+++ b/android/KMEA/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        //lasspath 'com.google.gms:google-services:4.2.0' // google-services plugin
     }
 }
 
